went back to earlier inquire version, changed import syntax, jest successful and inquirer running

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "dependencies": {
-    "inquirer": "^11.0.2"
-  },
   "devDependencies": {
     "jest": "^29.7.0"
   },
-  "type": "module"
+  "scripts": {
+    "test": "jest"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.6"
+  }
 }
